@@ -15,6 +15,9 @@ Change log next version
   when().
           post("/somewhere"). ..
 * Improved escaping of certain attributes (such as 'properties') when parsing JSON and XML (issue 552)
+* REST Assured now show all failing body assertions when using multiple expectations in the same body clause. For example:
+    .. then().body("x.y", equalTo("z"), "y.z", is(2)). ..
+  If both "x.y" and "y.z" fails REST Assured will print both errors. Before only the error of "x.y" was shown.
 
 Change log 2.4.1 (2015-04-12)
 ----------------------------
